objects/Property__c.object
<CustomObject>
    <label>Property</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Property Nuber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banglore</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Bhubaneswar</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Odisha</fullName>
                </value>
                <value>
                    <fullName>Maharashtra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facing__c</fullName>
        <label>Facing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Map__c</fullName>
        <label>Geo Map</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landmark__c</fullName>
        <label>Landmark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Bachellor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Bachellor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Balcony__c</fullName>
        <label>No of Balcony</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_From__c</fullName>
        <label>Available From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Furnished_Type__c</fullName>
        <label>Furnished Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fully furnished</fullName>
                </value>
                <value>
                    <fullName>Semi furnished</fullName>
                </value>
                <value>
                    <fullName>unfurnished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Of_Bed_Room__c</fullName>
        <label>No Of Bed Room</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Owner</label>
        <referenceTo>Property_Owner__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Room__c</fullName>
        <label>Additional Room</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Puja Room</fullName>
                </value>
                <value>
                    <fullName>Maid Room</fullName>
                </value>
                <value>
                    <fullName>Store Room</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Of_Bath_Room__c</fullName>
        <label>No Of Bath Room</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_area_sqft__c</fullName>
        <label>Carpet area(sqft)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coverd_area_sqft__c</fullName>
        <label>Coverd area(sqft)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electricity_Status__c</fullName>
        <label>Electricity Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Video_URL__c</fullName>
        <label>Property Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Water_Availability__c</fullName>
        <label>Water Availability</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintainance_Charge__c</fullName>
        <label>Maintainance Charge</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Main_Image__c</fullName>
        <label>Property Main Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        
        <fullName>Property_Description__c</fullName>
        <label>Property Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Furnishning_Available__c</fullName>
        <label>Furnishning Available</label>
        <type>TextArea</type>
    </fields>
</CustomObject>